--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@ The national flag of South Africa to the left and the South African cricket team
 </h4>
 </div>
 
-<div class= "noodle">
+<div>
  <img src="http://upload.wikimedia.org/wikipedia/commons/thumb/a/af/Flag_of_South_Africa.svg/1280px-Flag_of_South_Africa.svg.png" alt="div"  /> 
  <img src="http://upload.wikimedia.org/wikipedia/commons/c/c9/South_African_Cricket_team_2008.jpg" alt="" />
 </div>
@@ -71,7 +71,7 @@ The national flag of South Africa to the left and the South African cricket team
 <li>South Africa has eleven official languages</li>
 <li>The world's first heart transplant was performed in South Africa</li>
 <li>South Africa produces the second-largest amount of fruit in the world</li>
-<li>The largest diamond in the world was found in Africa</li>
+<li>The largest diamond in the world was found in South Africa</li>
 </div>
     
 <div class="center">
