--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@ The national flag of South Africa to the left and the South African cricket team
 </h4>
 </div>
 
-<div class="noodle" style="background-color: #338585; color:white; margin:20px; padding:20px;">
+<div class="noodle" >
  <img src="http://upload.wikimedia.org/wikipedia/commons/thumb/a/af/Flag_of_South_Africa.svg/1280px-Flag_of_South_Africa.svg.png" alt="div"  /> 
  <img src="http://upload.wikimedia.org/wikipedia/commons/c/c9/South_African_Cricket_team_2008.jpg" alt="" />
 </div>
