--- a/index.html
+++ b/index.html
@@ -53,11 +53,8 @@ The national flag of South Africa to the left and the South African cricket team
 </h4>
 </div>
 
-<div class="noodle" >
- <img src="http://upload.wikimedia.org/wikipedia/commons/thumb/a/af/Flag_of_South_Africa.svg/1280px-Flag_of_South_Africa.svg.png" alt="div"  /> 
- <img src="http://upload.wikimedia.org/wikipedia/commons/c/c9/South_African_Cricket_team_2008.jpg" alt="" />
-</div>
-
+<IMG class="displayed" src=http://upload.wikimedia.org/wikipedia/commons/thumb/a/af/Flag_of_South_Africa.svg/1280px-Flag_of_South_Africa.svg.png  
+style="width:600px;length:600px;">
   
 <div class="potato" style="background-color: #AA69FF; color:white; margin:20px; padding:20px;"><p>
   Ms. Sanderson is (in alphabetical order): adventurous, affable, agreeable, ambitious, amiable, amicable, amusing, brave, broad-minded, calm, careful, charming, communicative, considerate, courageous, courteous, creative, decisive, determined, diligent, dynamic, easygoing, enthusiastic, exuberant, fair-minded, faithful, fearless, forceful, frank, friendly, funny, generous, good,hard-working, helpful, honest, humorous, independent, intellectual, intelligent, intuitive, inventive, kind, modest, neat, nice, optimistic, patient, persistent, pioneering, polite, powerful, practical, pro-active, quick-witted, quiet, resourceful, self-confident, self-disciplined, sensible, sensitive, sincere, sociable, straightforward, sympathetic, thoughtful, tidy, tough, understanding, and witty.
