--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@ style="width:600px;length:600px;">
 
 <div class="potato" style="background-color: #338585; color:white; margin:20px; padding:20px;"> 
 <h4>
-The national flag of South Africa to the left and the South African cricket team to the right!
+The national flag of South Africa down below!
 </h4>
 </div>
 
