--- a/olympics.html
+++ b/olympics.html
@@ -44,7 +44,7 @@
   
 <div>
  <img src="http://dt9guucc6nuua.cloudfront.net/media/LargeP/bf76e9d9-ccb0-4ccc-a198-63e695191c08.jpg?v=1573189280" alt="div"  /> 
- <img src="http://wpmedia.news.nationalpost.com/2015/01/caster-semenya1.jpg?w=620" alt="" >
+ <img src="http://www.xtri.com/modules/imageresizer/333/550/f8d8c0f56e/375x270pCENTERxTOP.jpg" alt="" >
  <img src="http://en.starafrica.com/sport/files/2012/11/Natation_Afrique__du_sud_Darian_Townsend.jpg" alt="" >
 </div>
 
