--- a/index.html
+++ b/index.html
@@ -30,7 +30,13 @@
   <h4>Third Period South Africa created this website for you!</h4>
 </div>
 
-
+<nav>
+    <ul>
+        <li><a href="http://output.jsbin.com/tibudi/">Home </a>
+        <li><a href="http://output.jsbin.com/cawako/">Skills</a></li>
+        <li><a href="http://output.jsbin.com/wejake/">Contact Me</a></li>
+    </ul>
+</nav>
 <div class="potato" style="background-color: #9999FF; color:white; margin:20px; padding:20px;">
   <p>
   Hello, Mr. McKavish, and welcome to the official home page of WRMS South Africa Olympics. 
