--- a/olympics.html
+++ b/olympics.html
@@ -30,7 +30,13 @@
   <h4>All of our team's current and past members!</h4>
 </div>
 
-
+<nav>
+    <ul>
+        <li><a href="http://output.jsbin.com/tibudi/">Home </a>
+        <li><a href="http://output.jsbin.com/cawako/">Skills</a></li>
+        <li><a href="http://output.jsbin.com/wejake/">Contact Me</a></li>
+    </ul>
+</nav>
 <div class= "potato" style= "background-color: #FFAA99; color:white; margin:20px; padding:20px;">
   <p>
   Our current team members are Arnav Gupta, Sahil Mehta, Akash Mankude, Shray Patel and Anish Punaroor, led by our team captain 
