--- a/olympics.html
+++ b/olympics.html
@@ -50,7 +50,7 @@
   
 <div>
  <img src="http://dt9guucc6nuua.cloudfront.net/media/LargeP/bf76e9d9-ccb0-4ccc-a198-63e695191c08.jpg?v=1573189280" alt="div"  /> 
- <img src="http://www.xtri.com/modules/imageresizer/333/550/f8d8c0f56e/375x270pCENTERxTOP.jpg" alt="" >
+ <img src="https://encrypted-tbn3.gstatic.com/images?q=tbn:ANd9GcRXqiwfHu4MPKAbR2TUDqMEilgYOeWkUV-3euXlHWiVixEIvLqO" alt="" >
  <img src="http://en.starafrica.com/sport/files/2012/11/Natation_Afrique__du_sud_Darian_Townsend.jpg" alt="" >
 </div>
 
