--- a/index.html
+++ b/index.html
@@ -21,8 +21,7 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-material-design/0.3.0/js/ripples.min.js">
   <link rel="stylesheet" href="style.css">
   <title>South Africa</title>
-  <div style="float: right;">
-  <IMG SRC="http://33.media.tumblr.com/avatar_5f9a05cfdd5c_128.png"></div>
+  <div style="float: right;"><IMG SRC="http://www.saaustralia.org/uploads/profile/photo-thumb-21488.png?_r=1427196256"></div>
 </head>
   <link href='http://fonts.googleapis.com/css?family=Quicksand' rel='stylesheet' type='text/css'>
 
