--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-material-design/0.3.0/js/ripples.min.js">
   <link rel="stylesheet" href="style.css">
   <title>South Africa</title>
-  <div style="float: right;"><src ="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTZG193eNND8B-rqnIswbe02IAZWSayxiW-I8gym7dFAVCAmG3z" style= "width:100px;length:100px;"></div>
+  <div style="float: right;"><IMG class="displayed" src=https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTZG193eNND8B-rqnIswbe02IAZWSayxiW-I8gym7dFAVCAmG3z  
+style="width:100px;length 100px;">
 </head>
   <link href='http://fonts.googleapis.com/css?family=Quicksand' rel='stylesheet' type='text/css'>
 
