--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@ style="width:100px;length 100px;"> <div style="float: right;">
 
 <nav>
     <ul>
-        <li><a href="http://output.jsbin.com/tibudi/">Home </a>
-        <li><a href="http://output.jsbin.com/cawako/">Skills</a></li>
+        <li><a href="index.html">Home </a>
+        <li><a href="olympics.html">Skills</a></li>
         <li><a href="http://output.jsbin.com/wejake/">Contact Me</a></li>
     </ul>
 </nav>
