--- a/olympics.html
+++ b/olympics.html
@@ -32,8 +32,8 @@
 
 <nav>
     <ul>
-        <li><a href="http://output.jsbin.com/tibudi/">Home </a>
-        <li><a href="http://output.jsbin.com/cawako/">Skills</a></li>
+        <li><a href="index.html">Home </a>
+        <li><a href="olympics.html">Skills</a></li>
         <li><a href="http://output.jsbin.com/wejake/">Contact Me</a></li>
     </ul>
 </nav>
