--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
 <nav>
     <ul>
         <li><a href="index.html">Home </a>
-        <li><a href="olympics.html">Skills</a></li>
-        <li><a href="http://output.jsbin.com/wejake/">Contact Me</a></li>
+        <li><a href="olympics.html">Olympics</a></li>
+        <li><a href="http://output.jsbin.com/wejake/">History</a></li>
     </ul>
 </nav>
 <div class="potato" style="background-color: #9999FF; color:white; margin:20px; padding:20px;">
