--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-material-design/0.3.0/js/ripples.min.js">
   <link rel="stylesheet" href="style.css">
   <title>South Africa</title>
-<div style="float: right; clear: left;"><Img src="http://www.cricketworldcupscore.net/images/teams/South%20Africa.png" ALT="image"></div>
+<div style="float: right; clear: left;"><Img src="http://upload.wikimedia.org/wikipedia/commons/thumb/4/4b/South_Africa_Flor.png/220px-South_Africa_Flor.png" ALT="image"></div>
 </head>
   <link href='http://fonts.googleapis.com/css?family=Quicksand' rel='stylesheet' type='text/css'>
 
