--- a/olympics.html
+++ b/olympics.html
@@ -34,7 +34,7 @@
 <nav>
     <ul>
         <li><a href="index.html">Home </a>
-        <li><a href="olympics.html">Olympics/a></li>
+        <li><a href="olympics.html">Olympics</a></li>
         <li><a href="http://output.jsbin.com/wejake/">History</a></li>
     </ul>
 </nav>
