--- a/olympics.html
+++ b/olympics.html
@@ -35,7 +35,7 @@
     <ul>
         <li><a href="index.html">Home </a>
         <li><a href="olympics.html">Olympics</a></li>
-        <li><a href="http://output.jsbin.com/wejake/">History</a></li>
+        <li><a href="history.html">History</a></li>
     </ul>
 </nav>
 <div class= "potato" style= "background-color: #FFAA99; color:white; margin:20px; padding:20px;">
