--- a/history.html
+++ b/history.html
@@ -1,1 +1,40 @@
+<!DOCTYPE html>
+<html>
+<head>
+  <meta charset="utf-8">
+  <title>Africans of the South</title>
+  <link rel='stylesheet' href='style.css'>
+  <meta charset="utf-8">
+  <style>
+  .center {
+    margin-left: auto;
+    margin-right: auto;
+    width: 73px;
+  }
+  
+  </style>  
+  <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css" rel="stylesheet" type="text/css" />
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-material-design/0.3.0/css/material.min.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-material-design/0.3.0/css/ripples.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-material-design/0.3.0/js/material.min.js">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-material-design/0.3.0/js/ripples.min.js">
+  <link rel="stylesheet" href="style.css">
+  <title>South Africa</title>
+<div style="float: right; clear: left;"><IMG src="http://upload.wikimedia.org/wikipedia/commons/thumb/4/4b/South_Africa_Flor.png/220px-South_Africa_Flor.png" ALT="image"></div>
+</head>
+  <link href='http://fonts.googleapis.com/css?family=Quicksand' rel='stylesheet' type='text/css'>
 
+<body>
+<div class='jumbotron' style='padding-bottom: 3em'>
+  <h1>South Africa</h1>
+  <h4>Third Period South Africa created this website for you!</h4>
+</div>
+
+<nav>
+    <ul>
+        <li><a href="index.html">Home </a>
+        <li><a href="olympics.html">Olympics</a></li>
+        <li><a href="history.html">History</a></li>
+    </ul>
+</nav>
