--- a/history.html
+++ b/history.html
@@ -31,7 +31,7 @@
   <h4>Third Period South Africa created this website for you!</h4>
 </div>
 
-<div>
+<div class= "potato" style= "background-color: #99AAFF; color:white; margin:20px; padding:20px;">
 <p>South Africa was settled by the Dutch in 1652 as a stopping point for ships on their way to the East Indies. Fruit and vegetables
 were grown here to battle the problem of scurvy aboard passing ships. The Dutch first settled the area that was to become Cape Town and with time expanded across the entire tip of southern Africa.
 After the Napoleonic wars in 1815, South Africa changed hands and became a British colony. Many of the Dutch went north to get
