--- a/history.html
+++ b/history.html
@@ -27,8 +27,8 @@
 
 <body>
 <div class='jumbotron' style='padding-bottom: 3em'>
-  <h1>South Africa</h1>
-  <h4>Third Period South Africa created this website for you!</h4>
+  <h1>Early History</h1>
+  <h4>Our humble origins</h4>
 </div>
 
 <nav>
