--- a/history.html
+++ b/history.html
@@ -46,3 +46,8 @@ After the Napoleonic wars in 1815, South Africa changed hands and became a Briti
 away from the English. Here they encountered tribes that, over time, had moved south from central Africa. </p>
 <a href="http://larktours.com/brief-history-of-south-africa" target="blank">Sources</a>
 </div>
+
+<div class= "potato" style= "background-color: #99AAFF; color:white; margin:20px; padding:20px;">
+<h3> A Brief Timeline on South Africa's History</h3>
+<IMG class="displayed" src=https://lh3.googleusercontent.com/qYfYahEoSWveCtmtCSfr10-nSo7OMx-bIYjQzbTz29ZWVcAjFk5XQ6yMNx8xpoMc3q2dYGIGNZgAjpH5_FQ5rDFyUNGtjR5UuNFDMFE5cA=s660  
+style="width:800px;length:800px;">
