--- a/history.html
+++ b/history.html
@@ -51,3 +51,4 @@ away from the English. Here they encountered tribes that, over time, had moved s
 <h3> A Brief Timeline on South Africa's History</h3>
 <IMG class="displayed" src=https://lh3.googleusercontent.com/qYfYahEoSWveCtmtCSfr10-nSo7OMx-bIYjQzbTz29ZWVcAjFk5XQ6yMNx8xpoMc3q2dYGIGNZgAjpH5_FQ5rDFyUNGtjR5UuNFDMFE5cA=s660  
 style="width:800px;length:800px;">
+  </div>
