--- a/history.html
+++ b/history.html
@@ -49,6 +49,6 @@ away from the English. Here they encountered tribes that, over time, had moved s
 
 <div class= "potato" style= "background-color: #99AAFF; color:white; margin:20px; padding:20px;">
 <h3> A Brief Timeline on South Africa's History</h3>
-<IMG class="displayed" src=https://lh3.googleusercontent.com/qYfYahEoSWveCtmtCSfr10-nSo7OMx-bIYjQzbTz29ZWVcAjFk5XQ6yMNx8xpoMc3q2dYGIGNZgAjpH5_FQ5rDFyUNGtjR5UuNFDMFE5cA=s660  
+<IMG class="displayed" src=http://img.docstoccdn.com/thumb/orig/49846381.png  
 style="width:800px;length:800px;">
   </div>
