--- a/history.html
+++ b/history.html
@@ -49,6 +49,5 @@ away from the English. Here they encountered tribes that, over time, had moved s
 
 <div class= "potato" style= "background-color: #99AAFF; color:white; margin:20px; padding:20px;">
 <h2> A Brief Timeline on South Africa's History</h2>
-<IMG class="displayed" src=http://img.docstoccdn.com/thumb/orig/49846381.png  
-
+<img src="http://img.docstoccdn.com/thumb/orig/49846381.png" alt="Mountain View" style="width:800px;height:1400px;"> 
   </div>
