--- a/history.html
+++ b/history.html
@@ -50,5 +50,4 @@ away from the English. Here they encountered tribes that, over time, had moved s
 <div class= "potato" style= "background-color: #99AAFF; color:white; margin:20px; padding:20px;">
 <h2> A Brief Timeline on South Africa's History</h2>
 <img src="http://img.docstoccdn.com/thumb/orig/49846381.png" alt="Mountain View" style="width:1200px;height:1400px;"> 
-Credits: https://www.google.com/url?sa=i&rct=j&q=&esrc=s&source=images&cd=&cad=rja&uact=8&ved=0CAYQjB1qFQoTCM7LmL6nhMYCFQaUiAod7hcAJw&url=http%3A%2F%2Fwww.sb.kraljeva-sutjeska.com%2Ffoto%2Fthemes%2Frainy_day%2Fimages%2F___history%2520african%2520art%2520timeline&ei=oL93Vc77O4aoogTur4C4Ag&psig=AFQjCNH-lnttE_cfIwrd575ERDQrD59LnQ&ust=1433997037706997
-  </div>
+Credits: http://www.sb.kraljeva-sutjeska.com/foto/themes/rainy_day/images/___history%20african%20art%20timeline  </div>
