--- a/history.html
+++ b/history.html
@@ -51,3 +51,12 @@ away from the English. Here they encountered tribes that, over time, had moved s
 <h2> A Brief Timeline on South Africa's History</h2>
 <img src="http://img.docstoccdn.com/thumb/orig/49846381.png" alt="Mountain View" style="width:1150px;height:1400px;"> 
 Credits: http://www.sb.kraljeva-sutjeska.com/foto/themes/rainy_day/images/___history%20african%20art%20timeline  </div>
+
+<div class= "potato" style= "background-color: #99AAFF; color:white; margin:20px; padding:20px;">
+  <h2>Some Famous People from South Africa</h2>
+  <div id="header"></div>
+<div id="container">
+    <div id="first"></div>
+    <div id="second"></div>
+    <div id="clear"></div>
+</div>
